data vis frontend

--- a/data_vis/templates/data_vis/index.html
+++ b/data_vis/templates/data_vis/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+{% load static %}<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
     <meta charset="utf-8">
     <title>Data</title>
 </head>
 <body>
-
+    <main id="mount_point"></main>
+    <script src="{% static 'data_vis/dist/main.js' %}" charset="utf-8"></script>
 </body>
 </html>
