--- a/data_vis/templates/data_vis/index.html
+++ b/data_vis/templates/data_vis/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>Data</title>
+    <link rel="stylesheet" href="{% static 'data_vis/rc-slider.css' %}">
 </head>
 <body>
-    <main id="mount_point"></main>
+    <main id="mount_point" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></main>
     <script src="{% static 'data_vis/dist/main.js' %}" charset="utf-8"></script>
 </body>
 </html>
