--- a/data_vis/templates/data_vis/index.html
+++ b/data_vis/templates/data_vis/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <title>Data</title>
-    <link rel="stylesheet" href="{% static 'data_vis/rc-slider.css' %}">
+    <link rel="stylesheet" href="{% static 'data_vis/css/rc-slider.css' %}">
+    <link rel="stylesheet" href="{% static 'data_vis/css/rc-slider-custom.css' %}">
 </head>
 <body>
     <main id="mount_point" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></main>
