WIP: added y-dy toggle switch, improved data views, split views into separate files, added frequency pattern finder

--- a/data_vis/templates/data_vis/index.html
+++ b/data_vis/templates/data_vis/index.html
@@ -5,6 +5,7 @@
     <title>Data</title>
     <link rel="stylesheet" href="{% static 'data_vis/css/rc-slider.css' %}">
     <link rel="stylesheet" href="{% static 'data_vis/css/rc-slider-custom.css' %}">
+    <link rel="stylesheet" href="{% static 'data_vis/css/rc-switch.css' %}">
 </head>
 <body>
     <main id="mount_point" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></main>
