using antd for tag filters

--- a/data_vis/templates/data_vis/index.html
+++ b/data_vis/templates/data_vis/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Data</title>
     <link rel="stylesheet" href="{% static 'data_vis/css/antd.css' %}">
+    <link rel="stylesheet" href="{% static 'data_vis/css/style.css' %}">
 </head>
 <body style="margin: 0;">
     <main id="mount_point"></main>
